# objectstorage

./: .dockerignore  .gitignore  LICENSE  docker-compose.yml  nginx.conf  nginx.dockerfile  pyproject.toml  readme.md  requirements.txt  store.dockerfile
app/: __main__.py  app.py
app/manager/: __init__.py
app/router/: __init__.py  action.py  dashboard.py  download.py
res/: dashboard.html  home.json
